Bug 429475 - Dark Theme is not working right in Group View
Summary: Dark Theme is not working right in Group View
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-21 21:08 UTC by stefg.bz+bugskde
Modified: 2020-11-22 20:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stefg.bz+bugskde 2020-11-21 21:08:54 UTC
SUMMARY
Dark Theme is not working right in Group View

STEPS TO REPRODUCE
I am using Tellico with Ubuntu 20.04, Gnome Shell and the Yaru Dark theme.
Tellico being a KDE app made with Qt does not use this theme.

I found several methods to have a dark theme in Tellico
(thanks to https://wiki.archlinux.org/index.php/Uniform_look_for_Qt_and_GTK_applications#Styles_for_both_Qt_and_GTK
and http://ubuntuhandbook.org/index.php/2020/11/change-qt5-apps-theme-look-native-ubuntu-20-04/ )

sudo apt install qt5-style-plugins
Launch with: QT_QPA_PLATFORMTHEME=gtk2 tellico

sudo apt install qt5-style-kvantum
Launch kvantum and apply a dark theme
Launch with: QT_STYLE_OVERRIDE=kvantum tellico

OBSERVED RESULT
In all cases, *almost* everything looks right:
- the entry view does not change and still respects the chosen template.
- the background of the menu, toolbar, group view and collection view is dark
- the text is white or whatever light color the theme defines

Well, except for one thing:
in the Group View, the main field along which the grouping is done remains desperately black.

For example, if the Grouping selection is "author", all the author names in the Group View are black and unreadable.
Note that if I open an author section, the book titles are correctly written in white.

EXPECTED RESULT
In the Group View, the main field along which the grouping should become white like all other text fields in the application.

SOFTWARE/OS VERSIONS
Linux: Ubuntu 20.04, Gnome Shell
(available in About System)
KDE Plasma Version: N/A
KDE Frameworks Version: 5.68.0
Qt Version: Qt 5.12.8 (built against 5.12.8)

ADDITIONAL INFORMATION
Can you look into why this particular text does not get styled correctly ?
Any workaround in config files for example would be welcome too.
Comment 1 Robby Stephenson 2020-11-22 20:08:52 UTC
Git commit a969b811c1940fd2723f1d08c40f318fb06ae14b by Robby Stephenson.
Committed on 22/11/2020 at 20:08.
Pushed by rstephenson into branch '3.3'.

Use palette color for group text name to respect color scheme
FIXED-IN: 3.3.4

M  +1    -0    ChangeLog
M  +9    -2    src/gui/countdelegate.cpp

https://invent.kde.org/office/tellico/commit/a969b811c1940fd2723f1d08c40f318fb06ae14b
Comment 2 Robby Stephenson 2020-11-22 20:09:20 UTC
Git commit e470dbb4995bd653a7c9fa10c3a7b5ee0ebe53a0 by Robby Stephenson.
Committed on 22/11/2020 at 20:07.
Pushed by rstephenson into branch 'master'.

Use palette color for group text name to respect color scheme
FIXED-IN: 3.3.4

M  +1    -0    ChangeLog
M  +9    -2    src/gui/countdelegate.cpp

https://invent.kde.org/office/tellico/commit/e470dbb4995bd653a7c9fa10c3a7b5ee0ebe53a0