Use palette color for group text name to respect color scheme

BUG: 429475
FIXED-IN: 3.3.4